applications/keycloak/base/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  parentRefs:
    - name: keycloak
      namespace: keycloak
      sectionName: https
  hostnames:
    - id.rye.ninja
  rules:
    - backendRefs:
        - name: keycloak
          port: 80
